# librasta

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
cmake/: FindWolfSSL.cmakee  (+1 more)
examples/: CMakeLists.txt
examples/common/c/: configfile.c  dictionary.c  logging.c
examples/common/headers/: configfile.h  dictionary.h
examples/config/: example_rasta_config.cfg  rasta_client1.cfg  rasta_client1_local_dtls.cfg  rasta_client1_local_kex.cfg  rasta_client1_local_tls.cfg  rasta_client2.cfg  rasta_client2_local_dtls.cfg  rasta_client2_local_kex.cfg  rasta_client2_local_tls.cfg  rasta_client_local.cfg  rasta_client_local_dtls.cfg  rasta_client_local_tls.cfg  rasta_java.cfg  rasta_server.cfg  rasta_server_local.cfg  rasta_server_local_dtls.cfg  rasta_server_local_kex.cfg  rasta_server_local_tls.cfg  rasta_wrapper.cfg  root-ca.pem  server.key  server.pem
examples/example_scripts/: example_dtls.sh  example_kex.sh  example_local.sh  example_tcp.sh  example_tls.sh  example_udp.sh
examples/examples_localhost/c/: dtls.c  event_test.c  kex.c  pw2iv.c  rasta.c  record_generator.c  tls.c  wolfssl_certificate_helper.c  wolfssl_certificate_helper.h
examples/logging_example/c/: main.c
examples/mux_stresstest/c/: main.c
examples/rasta_example_new/: CMakeLists.txt
examples/rasta_example_new/c/: main.c
examples/rasta_grpc_bridge/: CMakeLists.txt
examples/rasta_grpc_bridge/cpp/: main.cpp
examples/rcat/c/: dtls.c  kex.c  rcat.c  rcat_dtls.c  rcat_kex.c  rcat_tls.c  record_generator.c  tls.c  wolfssl_certificate_helper.h
examples/sci/common/: hashmap.c  hashmap.h  sci.c  sci.h  sci_telegram_factory.c  sci_telegram_factory.h  scils.c  scils.h  scils_telegram_factory.c  scils_telegram_factory.h  scip.c  scip.h  scip_telegram_factory.c  scip_telegram_factory.h
examples/sci/scils/: main.c
examples/sci/scip/: main.c
examples/sci/scitest/c/: registerTests.c  sciTests.c  scilsTests.c  scipTests.c
examples/sci/scitest/headers/: registerTests.h  sciTests.h  scilsTests.h  scipTests.h
examples/scils_example/: CMakeLists.txt
examples/scip_example/: CMakeLists.txt
src/: CMakeLists.txt
src/c/: bsd_utils.c  event_system.c  fifo.c  key_exchange.c  logging.c  logging.h  rasta.c  rasta_connection.h  rasta_init.c  rasta_lib.c  rasta_new.c  rasta_red_multiplexer.c  rastablake2.c  rastadeferqueue.c  rastafactory.c  rastafactory.h  rastahandle.c  rastahandle.h  rastamd4.c  rastamodule.c  rastasiphash24.c  ssl_utils.c
src/c/experimental/: handlers.c  handlers.h  key_exchange.c  key_exchange.h
src/c/redundancy/: rasta_red_multiplexer.c  rasta_red_multiplexer.h  rasta_redundancy_channel.c  rasta_redundancy_channel.h  rastaredundancy.c  rastaredundancy.h  rastaredundancy_new.c
src/c/retransmission/: handlers.c  handlers.h  messages.c  messages.h  protocol.c  protocol.h  safety_retransmission.c  safety_retransmission.h
src/c/transport/: bsd_utils.c  bsd_utils.h  diagnostics.c  diagnostics.h  dtls.c  events.c  events.h  rasta_transport_callbacks.c  rasta_transport_callbacks.h  ssl_utils.c  ssl_utils.h  tcp.c  tcp.h  tcp_base.c  tls.c  transport.c  transport.h  udp.c  udp.h  udp_base.c
src/c/util/: event_system.c  event_system.h  fifo.c  fifo.h  rastablake2.c  rastablake2.h  rastacrc.c  rastacrc.h  rastadeferqueue.c  rastadeferqueue.h  rastahashing.c  rastahashing.h  rastamd4.c  rastamd4.h  rastamodule.c  rastamodule.h  rastasiphash24.c  rastautil.c  rastautil.h  rmemory.c  rmemory.h
src/include/rasta/: bsd_utils.h  config.h  event_system.h  events.h  fifo.h  key_exchange.h  logging.h  notification.h  rasta.h  rasta_connection.h  rasta_init.h  rasta_lib.h  rasta_new.h  rasta_red_multiplexer.h  rastablake2.h  rastacrc.h  rastadeferqueue.h  rastafactory.h  rastahandle.h  rastahashing.h  rastamd4.h  rastamodule.h  rastaredundancy.h  rastaredundancy_new.h  rastarole.h  rastasiphash24.h  rastautil.h  rmemory.h  ssl_utils.h  tcp.h  temp.h  transport.h  types.h  udp.h
src/rasta/c/: bsd_error.c  bsd_utils.c  config.c  event_system.c  fifo.c  key_exchange.c  logging.c  rasta_lib.c  rasta_new.c  rasta_red_multiplexer.c  rastablake2.c  rastacrc.c  rastadeferqueue.c  rastafactory.c  rastahandle.c  rastahashing.c  rastamd4.c  rastaredundancy_new.c  rastautil.c  rmemory.c  ssl_utils.c  tcp.c  udp.c
src/rasta/headers/: bsd_error.h  bsd_utils.h  config.h  dictionary.h  event_system.h  fifo.h  kex_exchange.h  key_exchange.h  logging.h  rasta_lib.h  rasta_new.h  rasta_red_multiplexer.h  rasta_transport_callbacks.h  rastablake2.h  rastacrc.h  rastadeferqueue.h  rastafactory.h  rastahandle.h  rastahashing.h  rastamd4.h  rastamodule.h  rastaredundancy_new.h  ssl_utils.h  tcp.h  types.h  udp.h
src/sci/c/: sci.c  sci_telegram_factory.c  scils.c  scils_telegram_factory.c  scip.c  scip_telegram_factory.c
src/sci/headers/: hashmap.h
test/: CMakeLists.txt
test/rastaTest/c/: blake2test.c  configtest.c  dictionarytest.c  fifotest.c  opaquetest.c  rastacrcTest.c  rastadeferqueueTest.c  rastafactoryTest.c  rastamd4Test.c  rastamoduleTest.c  registerTests.c  siphash24test.c
test/rastaTest/headers/: blake2test.h  opaquetest.h  rastacrcTest.h  rastadeferqueueTest.h  rastafactoryTest.h  rastamd4Test.h  registerTests.h
test/rasta_test/c/: blake2_test.c  config_test.c  dictionary_test.c  fifo_test.c  opaque_test.c  rastacrc_test.c  rastadeferqueue_test.c  rastafactory_test.c  rastamd4_test.c  rastamodule_test.c  redundancy_channel_test.c  register_tests.c  safety_retransmission_test.c  siphash24_test.c
test/rasta_test/headers/: config_test.h  dictionary_test.h  fifo_test.h  rastalist_test.h  rastamodule_test.h  redundancy_channel_test.h  register_tests.h  safety_retransmission_test.h  siphash24_test.h
test/rasta_transport_test/c/: mock_socket.c  register_tests.c  transport_test.c  transport_test_tcp.c  transport_test_udp.c
test/rasta_transport_test/headers/: mock_socket.h  register_tests.h  transport_test.h  transport_test_tcp.h  transport_test_udp.h
test/redundancy_test/c/: main.c
(+23 files in other folders)
